syntax = "proto3";

option java_multiple_files = true;
option java_package = "product";

service ProductService{
  rpc CreateProductAccount(ProductRequest) returns (ProductResponse);
}

message ProductRequest{
  string product_id =1;
  string stock = 2;
}

message ProductResponse{

}